[package]
name = "gd-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
base64 = "0.22.1"
blake3 = "1.8.2"
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-tls = { version = "0.6.0", features = ["alpn", "vendored"] }
hyper-util = { version = "0.1.17", features = ["full"] }
moka = { version = "0.12.11", features = ["future"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
